@@ -11,6 +11,8 @@ Please visit http://aegisub.net to download latest version
    o Fixed bug, triggered when a line had a style not defined in the subs. A warning is now shown instead.
 - Fixed bug in parser that would cause Aegisub to crash if you had a \fn without parameters and tried to pick font. (AMZ)
 - Fixed crash when opening audio that appeared in 1.08 (Myrsloik)
+- Implemented new graphical, mouse-controlled karaoke syllable splitter (jfs)
+
 
 = 1.09 beta - 2006.01.16 ===========================
 
